title-prefix: Support auto-completion title header
Title header and lable auto completion is triggered by '[' character
in the issue/posting title input box.

TL:DR
---
Title prefix header is loved feature of Yona.
It is very conveneint for expressing category of the posting.

But somtimes user mistyped or made duplication of title header which is
nearly the same but not exactly same. And, more Yona users adopt title
header, more they omit selecting issue labels.

It's a bad thing for all of us.

Now, Yona supports auto-completion of title header prefix and issue labels.
This is a trial to recude this kind of problem.

I hope it will be going well.

--- a/app/views/issue/partial_select_label.scala.html
+++ b/app/views/issue/partial_select_label.scala.html
@@ -27,7 +27,7 @@
       @Messages("label") @if(UserApp.currentUser().isManagerOf(project)){<a href="@routes.IssueLabelApp.labelsForm(project.owner, project.name)" target="_blank" class="label-edit">[@Messages("button.edit")]</a>}
   </dt>
   <dd>
-    <select name="labelIds" multiple="multiple" data-search="labelIds"
+    <select id="labelIds" name="labelIds" multiple="multiple" data-search="labelIds"
             data-toggle="select2" data-format="issuelabel" data-allow-clear="true"
             data-dropdown-css-class="issue-labels" data-container-css-class="issue-labels bordered fullsize"
             data-placeholder="@Messages("label.select")" @additionalAttr class="hide">
