--- a/app/views/board/create.scala.html
+++ b/app/views/board/create.scala.html
@@ -121,6 +121,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
+<script type="text/jAvascript" src="@routes.Assets.at("javascripts/common/yona.TitleHeadAutoCompletion.js")"></script>
 <script type="text/javascript">
 $(function(){
     $yobi.loadModule("board.Write", {
@@ -153,6 +154,11 @@ $(function(){
     $(".project-menu-gruop > li").removeClass("active");
     $(".code-menu").addClass("active");
   }
+
+    yonaTitleHeadModule({
+        "target": 'input[id=title]',
+        "url"   : "@api.routes.ProjectApi.titleHeads(project.owner, project.name)"
+    });
 });
 </script>
 }
