--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -185,6 +185,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.Subtask.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.issue.Assginee.js")"></script>
+<script type="text/jAvascript" src="@routes.Assets.at("javascripts/common/yona.TitleHeadAutoCompletion.js")"></script>
 <script type="text/javascript">
     $(function(){
         // yobi.issue.Write
@@ -209,6 +210,11 @@
                 "",
                 "@Messages("issue.assignee")"
         );
+
+        yonaTitleHeadModule({
+            "target": 'input[id=title]',
+            "url"   : "@api.routes.ProjectApi.titleHeads(project.owner, project.name)"
+        });
    });
 </script>
 
