--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -1,7 +1,7 @@
 @**
 * Yona, 21st Century Project Hosting SW
 *
-* Copyright Yona & Yobi Authors & NAVER Corp.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
 * https://yona.io
 **@
 @import play.data.Form
@@ -37,7 +37,7 @@
                     	@defining(issueForm.errors().get("title")) { errors =>
                             <div class="span12">
                                 <div class="span11">
-                                    <input type="text" id="title" name="title" value="" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")">
+                                    <input type="text" id="title" name="title" value="" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")" autocomplete="off">
                                 </div>
                                 <div class="span1 subtask-message">@Messages("issue.option")</div>
                             </div>
