css: Change the font of subtask list number

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7114,6 +7114,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     color: darkgrey;
     font-size: 12px;
     margin-right: 5px;
+    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 }
 
 .to-branch {
