--- a/app/views/issue/partial_voters.scala.html
+++ b/app/views/issue/partial_voters.scala.html
@@ -14,14 +14,14 @@
             <li>@Html(getUserAvatar(UserApp.currentUser, "smaller"))</li>
         }
 
-        @defining(issue.voters) { issueVoters =>
+        @defining(VoteApp.getVotersExceptCurrentUser(issue.voters)) { issueVoters =>
             @for(voter <- VoteApp.getVotersForAvatar(issueVoters, numOfAvatars)) {
                 <li>@Html(getUserAvatar(voter, "smaller"))</li>
             }
             @if(issueVoters.size > numOfAvatars) {
                 <li data-toggle="tooltip" data-html="true"
                     title="
-                    @for(voter <- issueVoters) {
+                    @for(voter <- VoteApp.getVotersForName(issueVoters, numOfAvatars, numOfNames)) {
                         @voter.name <br>
                     }
                     @if(issueVoters.size > numOfAvatars + numOfNames) {
