js: Upgrade Clipboard.js to 2.0
Clipboard api is introduced by browsers natively.
It is needed to upgrade Clipboard.js library.

--- a/app/views/code/history.scala.html
+++ b/app/views/code/history.scala.html
@@ -231,7 +231,7 @@ $(document).ready(function(){
 
         // zclip() works only in visible element
         welBtnCopy.on("mouseenter", function(){
-            if (Clipboard && Clipboard.isSupported()) {
+            if (ClipboardJS && ClipboardJS.isSupported()) {
                 // Using clipboard.min.js if supports clipboard api.
                 if (clipboard) {
                     clipboard.destroy(); // Destroy previous instance before locate new instance.
