--- a/app/views/project/home.scala.html
+++ b/app/views/project/home.scala.html
@@ -51,7 +51,7 @@
             @if(project.menuSetting.code) {
                 <div class="project-clone-wrap span3 hide-in-mobile">
                     <input type="text" class="project-clone-url" id="cloneURL" readonly="readonly" value="@if(project.isGit){@CodeApp.getURLWithLoginId(project)} else {@CodeApp.getURL(project)}">
-                    <button class="ybtn project-clone-button" id="cloneURLBtn">@Messages("code.copyUrl")</button>
+                    <button class="ybtn project-clone-button" data-clipboard-target="cloneURL" id="cloneURLBtn">@Messages("code.copyUrl")</button>
                 </div>
             }
         </div>
