subtask: Show subtasks at the issue list page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6864,6 +6864,24 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 }
 
+.subtask-progress {
+    &:hover {
+        cursor:pointer;
+    }
+}
+
+.child-issue-list {
+    color: #333;
+
+    .closed {
+        background-color: transparent !important;
+    }
+
+    .yobicon-checkmark {
+        color: #fd6956;
+    }
+}
+
 .subtasks {
     #simple-issue-list;
     margin-bottom: 15px;
