--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -79,6 +79,11 @@
                     @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
                         <a href="#" class="label issue-label list-label active" data-category-id="@label.category.id" data-label-id="@label.id">@label.name</a>
                     }
+                    <div class="child-issue-list hide">
+                    @if(issue.hasChildIssue){
+                        @partial_view_childIssueListOnly(issue, project)
+                    }
+                    </div>
                 </div>
             </div>
         </div>
