--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -32,6 +32,9 @@
         <li>
             <a href="#preview-@wrapId" data-toggle="tab" data-mode="preview">@Messages("common.editor.preview")</a>
         </li>
+        <li>
+            <div class="editor-notice-label"></div>
+        </li>
     </ul>
 
     <div class="tab-content" style="position:relative;overflow: visible;">
