--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -183,18 +183,18 @@ function test() {
             <div class="row-fluid markdwon-syntax-wrap">
                 <div class="span6 markdwon-syntax">
 <pre>
-| Project Type | Pull Request | Issue |
-| ------------ | ------------ | ----- |
-| Git          | Yes          | Yes   |
-| SVN          | No           | Yes   |
+| Default      | Align center | Align right |
+| ------------ | :----------: | ------: |
+| Carrot       | Red          | 1,000   |
+| Banana       | Yellow       | 32,000  |
 </pre>
                 </div>
                 <div class="span6">
                     <div class="markdown-wrap"   markdown="true">
-| Project Type | Pull Request | Issue |
-| ------------ | ------------ | ----- |
-| Git          | Yes          | Yes   |
-| SVN          | No           | Yes   |
+| Default      | Align center | Align right |
+| ------------ | :----------: | ------: |
+| Carrot       | Red          | 1,000   |
+| Banana       | Yellow       | 32,000  |
                     </div>
                 </div>
             </div>
