--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2873,6 +2873,68 @@ label.inline-list {
                 padding-left: 5px;
             }
 
+            .add-a-comment {
+                font-size: 10px;
+                color: #BDC3C7;
+                position: relative;
+                right: 10px;
+                margin-top: -5px;
+
+                &:hover {
+                    color: #00b0e8;
+                    cursor: pointer;
+                    display: block;
+                }
+            }
+
+            .subcomment-media-body {
+                margin-left: 60px;
+                text-align: right;
+
+                .deleteButtonX {
+                    display: inline-flex;
+                    align-items: center;
+                    color: red;
+                }
+                .child-comments {
+                }
+                .one-line-comment {
+                    font-size: 11px;
+
+                    :hover {
+                       background-color: #f1f1f1;
+                    }
+
+                    .contents {
+                        text-align: left;
+                        margin-left: 12px;
+                        padding: 3px 0 2px 10px;
+                        border-bottom: 1px dashed #ccc;
+                    }
+                    .author {
+                        text-align: right;
+                    }
+                }
+                .child-comment-input-form {
+                    display: none;
+                    visibility: hidden;
+
+                    textarea {
+                        margin-top: 5px;
+                        border: none;
+                        border-bottom: 1px solid #ccc;
+                        border-radius: 0 !important;
+                        margin-bottom: 0;
+                        resize: none;
+                        overflow: hidden;
+                    }
+
+                    button {
+                        display: inline-block;
+                    }
+                }
+            }
+
             .media-body {
 
                 margin-left:52px;
