--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -551,6 +551,52 @@
                 $this.removeClass("dimgray white")
                         .addClass($yobi.getContrastColor($this.css('background-color')))
             });
+
+            // Releated with one line sub-comment feature
+            $(".add-a-comment").on("click", function(e){
+                var parent = $(this).parent(".subcomment-media-body");
+
+                // Reset & Ready
+                $(".child-comment-input-form").css("display", "none").css("visibility", "hidden");
+                $(".add-a-comment").show();
+                $(this).hide();
+
+                // Show input form
+                parent.find(".child-comment-input-form").css("display", "block").css("visibility", "visible");
+
+                parent.find("textarea").on('keypress', function(e) {
+                    // Enter to submit
+                    if ((e.keyCode || e.which) === 13) {
+                        $(this).parents('form').submit();
+                        return false;
+                    }
+                }).on('keyup', function(e) {
+                    // Cancel input
+                    if ((e.keyCode || e.which) === 27) {
+                        $(".child-comment-input-form").css("display", "none").css("visibility", "hidden");
+                        $(".add-a-comment").show();
+                    }
+                }).focus();
+            });
+
+            // Releated with one line sub-comment feature
+            $(".subcomment-author").each(function addAuthorToLastParagraphOfOnelineComment(index, el){
+                // append Author and addtionals to mardkown rendered contents
+                var $el = $(el);
+                // Remove spaces
+                var trimmed = $el.html().replace(/\s\s+/g, ' ');
+                // Find parent element
+                var $closest = $el.closest('.contents');
+                var normalTextRenderedParagraph = $closest.find('p').last();
+
+                // Remove unused author and addtional text
+                $el.remove();
+                if(normalTextRenderedParagraph.length === 0){
+                    $closest.append(trimmed);
+                } else {
+                    normalTextRenderedParagraph.append(trimmed);
+                }
+            });
         });
 </script>
 }
