--- a/app/views/issue/my_partial_search.scala.html
+++ b/app/views/issue/my_partial_search.scala.html
@@ -36,6 +36,7 @@
                 <input type="hidden" name="assigneeId" value="@param.assigneeId" data-search="assigneeId">
                 <input type="hidden" name="mentionId" value="@param.mentionId" data-search="mentionId">
                 <input type="hidden" name="sharerId" value="@param.sharerId" data-search="sharerId">
+                <input type="hidden" name="favoriteId" value="@param.favoriteId" data-search="favoriteId">
                 <div class="search myissues-search-input">
                     <div class="search-bar">
                         <input name="filter" class="textbox full" type="text" value="@param.filter" placeholder="@Messages("issue.search")">
