--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7273,3 +7273,22 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         white-space: nowrap;
     }
 }
+
+.favorite-issue {
+    .my-issue {
+        font-size: 16px !important;
+    }
+
+    .star {
+        color: rgba(0, 0, 0, 0.2);
+        font-size: 20px;
+
+        &:hover {
+            color: #e91e63;
+            cursor: pointer;
+        }
+    }
+    .starred {
+        color: #e91e63 !important;
+    }
+}
