--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -564,12 +564,11 @@
                 var parent = $(this).parent(".subcomment-media-body");
 
                 // Reset & Ready
-                $(".child-comment-input-form").css("display", "none").css("visibility", "hidden");
-                $(".add-a-comment").show();
+                $(".child-comment-input-form").css("display", "none");
                 $(this).hide();
 
                 // Show input form
-                parent.find(".child-comment-input-form").css("display", "block").css("visibility", "visible");
+                parent.find(".child-comment-input-form").css("display", "block");
 
                 parent.find("textarea").on('keypress', function(e) {
                     // Enter to submit
@@ -577,13 +576,9 @@
                         $(this).parents('form').submit();
                         return false;
                     }
-                }).on('keyup', function(e) {
-                    // Cancel input
-                    if ((e.keyCode || e.which) === 27) {
-                        $(".child-comment-input-form").css("display", "none").css("visibility", "hidden");
-                        $(".add-a-comment").show();
-                    }
                 }).focus();
+
+                e.stopPropagation();
             });
 
             // Releated with one line sub-comment feature
@@ -602,6 +597,16 @@
                     $closest.append(trimmed);
                 } else {
                     normalTextRenderedParagraph.append(trimmed);
+                }
+            });
+
+            $(".comment").on("click", function(e){
+                if (!$(this).find(".child-comment-input-form").is(":visible")) {
+                    $(this).find(".add-a-comment").css("display", "block");
+                }
+            }).on("mouseover", function(e){
+                if (!$(this).find(".child-comment-input-form").is(":visible")) {
+                    $(this).find(".add-a-comment").show();
                 }
             });
         });
