license: Update copyright sentence

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -635,6 +635,7 @@
             font-family: Tahoma;
             color:#444;
             font-weight:bold;
+            padding: 0 2px;
 
             &:hover {
                 color: #2cb400;
@@ -646,6 +647,14 @@
             &:hover {
                 color: white;
                 background-color: orangered;
+                text-decoration: none;
+            }
+        }
+
+        .naver-labs {
+            &:hover {
+                color: white;
+                background-color: black;
                 text-decoration: none;
             }
         }
