--- a/app/views/common/footer.scala.html
+++ b/app/views/common/footer.scala.html
@@ -6,6 +6,6 @@
 **@
 <footer class="page-footer-outer">
     <div class="page-footer">
-        <span class="provider">Copyright <a href="https://github.com/yona-projects/yona/blob/master/AUTHORS" target="_blank" class="yona-author">Yona authors</a> & © <a href="http://navercorp.com/" target="_blank">NAVER Corp.</a> Supported by <a href="http://d2.naver.com" target="_blank" class="d2-program"><span class="d2">D2</span><span class="program"> Program</span></a></span>
+        <span class="provider">Copyright <a href="https://github.com/yona-projects/yona/blob/master/AUTHORS" target="_blank" class="yona-author">Yona authors</a> & © <a href="https://navercorp.com/" target="_blank">NAVER Corp.</a> & <a href="https://naverlabs.com/" target="_blank" class="naver-labs">NAVER LABS</a> Supported by <a href="https://d2.naver.com" target="_blank" class="d2-program">NAVER <span class="d2">D2</span><span class="program"></span></a></span>
     </div>
 </footer>
