css: Adjust markdown some css to match github
- remove image shadow
- remove image border (only in README)
- add bottom line of H2 header

See: Yona Github issue #402

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2632,6 +2632,17 @@ label.inline-list {
             font-size: 1.2em;
         }
     }
+
+    .markdown-wrap {
+        img {
+            box-sizing: content-box;
+            background-color: #fff;
+            border-style: none;
+            box-shadow: none;
+            margin: 5px 0;
+            padding: 0;
+        }
+    }
 }
 
 .project-overview-home {
