css: Adjust markdown some css to match github
- remove image shadow
- remove image border (only in README)
- add bottom line of H2 header

See: Yona Github issue #402

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -95,6 +95,7 @@ code {
     margin: 1em 0 5px;
     font-size:1.5em;
     width: 95%;
+    border-bottom: 1px solid #eaecef;
     .anchor();
   }
 
@@ -126,7 +127,7 @@ code {
   }
 
   p {
-    margin : 15px 0;
+    margin : 10px 0;
     line-height: 1.6em;
   }
 
@@ -158,12 +159,12 @@ code {
   li > img {
     max-width:80%;
   }
+  
   img{
     max-width:100%;
     margin:10px 0;
     padding: 5px;
     border:1px solid rgba(0,0,0,0.1);
-    .box-shadow(2px 2px 5px rgba(0,0,0,0.15));
     .box-sizing(border-box);
     max-height: 300px;
   }
