--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -606,6 +606,12 @@
                     normalTextRenderedParagraph.append(trimmed);
                 }
             });
+
+            $.elevator({
+                shape: 'rounded',
+                tooltips: true
+            });
+
         });
 </script>
 }
