--- a/public/javascripts/lib/elevator/jquery.elevator.css
+++ b/public/javascripts/lib/elevator/jquery.elevator.css
@@ -21,7 +21,7 @@
         text-align: center;
         font-family: "Courier New", Courier, monospace;
 
-        color: #51a277;
+        color: #03a9f4;
         background: #ffffff;
         box-shadow: 0 0 2px rgba(0,0,0,0.14),0 2px 4px rgba(0,0,0,0.28);
 
