webhook: Minor update (webhook UI, naming)

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -306,3 +306,8 @@ input.white:-ms-input-placeholder        { color:#fff; opacity:0.8; }
 }
 
 .dimgray { color:dimgray; }
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
