--- a/app/views/project/webhooks.scala.html
+++ b/app/views/project/webhooks.scala.html
@@ -24,7 +24,7 @@
             <input type="text" name="secret" class="input-webhook-secret" maxlength="250" autocomplete="off" placeholder="@Messages("project.webhook.secret")">
             <select class="form-control" title="add details or not" name="webhookType">
               <option value="SIMPLE">SIMPLE Version (no details)</option>
-              <option value="WITH_DETAILS">Normal (Slack/with details)</option>
+              <option value="DETAIL_SLACK">DETAIL Version (for slack) </option>
             </select>
             <label for="gitPushOnly">@Messages("project.webhook.gitPushOnly")</label>
             <input type="checkbox" id="gitPushOnly" name="gitPushOnly" class="form-check-input">
