lib: Upgrade marked to v0.5.0
See: https://github.com/markedjs/marked/releases/tag/v0.5.0

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -153,6 +153,11 @@ code {
   li > img {
     max-width:80%;
   }
+
+  li > input[type='checkbox'] {
+    vertical-align: baseline;
+    position: relative;
+  }
   
   img{
     max-width:100%;
@@ -168,7 +173,7 @@ code {
      list-style:disc;
   }
 
-   li{
+  li {
      line-height: 1.6em;
   }
 
