--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -158,6 +158,11 @@ code {
   li > img {
     max-width:80%;
   }
+
+  li > input[type='checkbox'] {
+    vertical-align: baseline;
+    position: relative;
+  }
   
   img{
     max-width:100%;
@@ -173,7 +178,7 @@ code {
      list-style:disc;
   }
 
-   li{
+  li {
      line-height: 1.6em;
   }
 
